# FerrOS

./: .gitignore  Cargo.toml  test.sh  x64_target.json
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs  vga_buffer.rs
src/malloc/: Cargo.toml
