[package]
name = "ferr_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"

[profile.dev]
panic = "abort"  # disable stack unwinding

[profile.release]
panic = "abort"  # disable stack unwinding
strip = true  # strip debug symbols from binary
